@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: December 6, 2008</p>
+      <p>Last Updated: December 7 2008</p>
     </td>
   </tr>
 </table>
@@ -1289,6 +1289,9 @@ buildroot-0.1.2 2007-11-06 &lt;spudmonkey@racsa.co.cr&gt
 <pre><ul>
 nuttx-0.4.1 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* Added board support fot the ZiLog ez80Acclaim! ez80f910200zco Development Kit.
+	* Fixed several compilation errors in fixed precision math library when built
+	  against toolchains that do not support 64-bit type 'long long'.
+	* Fix errors in some function prototypes in dirent.h
 
 pascal-0.1.3 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
