@@ -43,18 +43,24 @@
 /****************************************************************************
  * Definitions
  ****************************************************************************/
- 
-/* LED pattern definitions */
 
-#define LED_STARTED                 0
-#define LED_HEAPALLOCATE            1
-#define LED_IRQSENABLED             2
-#define LED_STACKCREATED            3
-#define LED_IDLE                    4
-#define LED_INIRQ                   5
-#define LED_ASSERTION               6
-#define LED_SIGNAL                  6
-#define LED_PANIC                   7
+/* LED pattern definitions                 ON                OFF            */
+
+#define LED_STARTED                 0  /*  '0'               N/A            */
+#define LED_HEAPALLOCATE            1  /*  'H'               N/A            */
+#define LED_IRQSENABLED             2  /*  'E'               N/A            */
+#define LED_STACKCREATED            3  /*  'C'               N/A            */
+#define LED_IDLE                    4  /*  'R'               N/A            */
+#define LED_INIRQ                   5  /*  'I'              (previous)      */
+#define LED_ASSERTION               6  /*  'A'              (previous)      */
+#define LED_SIGNAL                  7  /*  'S'              (previous)      */
+#define LED_PANIC                   8  /*  '*'              (previous)      */
+
+/* Button definitions */
+
+#define BUTTON_PB0                 0x01 /* PB0: SW1 Bit 0 of GPIO Port B    */
+#define BUTTON_PB1                 0x02 /* PB1: SW2 Bit 1 of GPIO Port B    */
+#define BUTTON_PB2                 0x04 /* PB2: SW3 Bit 2 of GPIO Port B    */
 
 /****************************************************************************
  * Public Functions
@@ -66,6 +72,11 @@
 extern "C" {
 #else
 #define EXTERN extern
+#endif
+
+#ifdef CONFIG_ARCH_BUTTONS
+EXTERN void up_buttoninit(void);
+EXTERN ubyte up_buttons(void);
 #endif
 
 #undef EXTERN
